fixed scale so that it is similar on mobile and web

--- a/client/components/literaryTrail/literaryTrail.scss
+++ b/client/components/literaryTrail/literaryTrail.scss
@@ -321,8 +321,7 @@ literaryPlacesCompleted::after{
 
 progress{
   background-color: #fff;
-  border: 1px;
-  height: 15px;
+  height: 10px;
   width: 100%;
   border-radius: 100px;
   color: #ffc0cb;
@@ -330,28 +329,26 @@ progress{
 
 progress::-webkit-progress-bar {
   background: #fff;
-  border: 1px;
-  height: 15px;
+  height: 10px;
   width: 100%;
   border-radius: 100px;
 }
 progress::-webkit-progress-value {
   background: #ffc0cb;
-  border: 1px;
-  height: 15px;
+  height: 10px;
   width: 100%;
   border-radius: 100px;
 }
 
 input.rangeClass{
-  border-radius: 100px !important;
-  margin-top: -15px !important;
+  border-radius: 50px !important;
+  margin-top: -12px !important;
   background: transparent !important;
 }
 
 input[type=range]::-webkit-slider-runnable-track {
   background: rgba(0, 0, 0, 0) !important;
-  border: 0.2px solid rgba(0, 1, 1, 0) !important;
+  border: 0px solid rgba(0, 1, 1, 0) !important;
 }
 
 .social{
