--- a/client/components/test/test.scss
+++ b/client/components/test/test.scss
@@ -5,6 +5,7 @@
 }
 
 .content-container{
-	padding-bottom: 10vh;
-  margin-top: 15vh;
+  margin-top: 24%;
+  padding-bottom: 67%;
+  background-color: white;
 }
